# arf-webcam-slam

./: .gitattributes  .gitignore  README.md
UnityProject/Assets/DevScenes/: DevBootstrap.cs  DevMain.unity
UnityProject/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
UnityProject/Assets/XR/Loaders/: WebCamSlamLoader.asset
UnityProject/Assets/XR/Settings/: WebCamSlamSettings.asset
UnityProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
native/: CMakeLists.txt  README.md  vcpkg.json
native/include/: wcs_api.h
native/patches/: 0001-use-linear-solver-eigen.patch  0002-msvc-build-fixes.patch
native/src/: wcs_api.cpp
